--- a/_index.html
+++ b/_index.html
@@ -6,6 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<link rel="stylesheet" href="styles.css" />
+		<link
+			href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<header class="nav-container">
@@ -21,8 +25,55 @@
 		</header>
 		<body>
 			<div class="grid-container">
-				<div class="grid-item">Column 1</div>
-				<div class="grid-item">Column 2</div>
+				<div class="grid-item">
+					<div class="left-side-container">
+						<div class="left-side-top">
+							<!-- <video loop muted autoplay>
+								<source src="./img/sunny_2.mp4" type="video/mp4" />
+								Your browser does not support the video tag.
+							</video> -->
+							<div class="left-side-item-one">
+								<label class="label-text" for="checkbox"
+									>Auto Detect Location</label
+								>
+								<label class="switch">
+									<input type="checkbox" />
+									<span class="slider"></span>
+								</label>
+							</div>
+							<div class="left-side-item-two">
+								<div class="search-container">
+									<i class="fa fa-search"></i>
+									<input type="text" placeholder="Search by location..." />
+								</div>
+							</div>
+						</div>
+						<div class="left-side-bottom">
+							<video loop muted autoplay>
+								<source src="./img/sunny_2.mp4" type="video/mp4" />
+								Your browser does not support the video tag.
+							</video>
+							<!-- <div class="left-side-item-one">
+								<label class="label-text" for="checkbox"
+									>Auto Detect Location</label
+								>
+								<label class="switch">
+									<input type="checkbox" />
+									<span class="slider"></span>
+								</label>
+							</div>
+							<div class="left-side-item-two">
+								<div class="search-container">
+									<i class="fa fa-search"></i>
+									<input type="text" placeholder="Search by location..." />
+								</div>
+							</div> -->
+						</div>
+					</div>
+				</div>
+				<div class="grid-item">
+					<h1 class="weather-text">It's Sunny Today!</h1>
+				</div>
 			</div>
 		</body>
 	</body>
