--- a/_index.html
+++ b/_index.html
@@ -28,10 +28,6 @@
 				<div class="grid-item">
 					<div class="left-side-container">
 						<div class="left-side-top">
-							<!-- <video loop muted autoplay>
-								<source src="./img/sunny_2.mp4" type="video/mp4" />
-								Your browser does not support the video tag.
-							</video> -->
 							<div class="left-side-item-one">
 								<label class="label-text" for="checkbox"
 									>Auto Detect Location</label
@@ -53,26 +49,45 @@
 								<source src="./img/sunny_2.mp4" type="video/mp4" />
 								Your browser does not support the video tag.
 							</video>
-							<!-- <div class="left-side-item-one">
-								<label class="label-text" for="checkbox"
-									>Auto Detect Location</label
-								>
-								<label class="switch">
-									<input type="checkbox" />
-									<span class="slider"></span>
-								</label>
-							</div>
-							<div class="left-side-item-two">
-								<div class="search-container">
-									<i class="fa fa-search"></i>
-									<input type="text" placeholder="Search by location..." />
-								</div>
-							</div> -->
 						</div>
 					</div>
 				</div>
 				<div class="grid-item">
-					<h1 class="weather-text">It's Sunny Today!</h1>
+					<div class="right-side-container">
+						<div class="right-side-item-one">
+							<div class="item-one-header-and-nav">
+								<h1 class="weather-text">It's Sunny Today!</h1>
+								<div class="nav-date-picker">
+									<span>
+										<i class="fa fa-chevron-circle-left" aria-hidden="true"></i>
+									</span>
+									<p class="date-picker-text">Monday, 22 May 2023</p>
+									<span>
+										<i
+											class="fa fa-chevron-circle-right"
+											aria-hidden="true"
+										></i>
+									</span>
+								</div>
+							</div>
+							<div class="item-one-icon">
+								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+									<path
+										d="M361.5 1.2c5 2.1 8.6 6.6 9.6 11.9L391 121l107.9 19.8c5.3 1 9.8 4.6 11.9 9.6s1.5 10.7-1.6 15.2L446.9 256l62.3 90.3c3.1 4.5 3.7 10.2 1.6 15.2s-6.6 8.6-11.9 9.6L391 391 371.1 498.9c-1 5.3-4.6 9.8-9.6 11.9s-10.7 1.5-15.2-1.6L256 446.9l-90.3 62.3c-4.5 3.1-10.2 3.7-15.2 1.6s-8.6-6.6-9.6-11.9L121 391 13.1 371.1c-5.3-1-9.8-4.6-11.9-9.6s-1.5-10.7 1.6-15.2L65.1 256 2.8 165.7c-3.1-4.5-3.7-10.2-1.6-15.2s6.6-8.6 11.9-9.6L121 121 140.9 13.1c1-5.3 4.6-9.8 9.6-11.9s10.7-1.5 15.2 1.6L256 65.1 346.3 2.8c4.5-3.1 10.2-3.7 15.2-1.6zM160 256a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zm224 0a128 128 0 1 0 -256 0 128 128 0 1 0 256 0z"
+										style="fill: yellow; stroke: yellow"
+									/>
+								</svg>
+							</div>
+						</div>
+						<div class="right-side-item-two">
+							<div class="weather-text-container">
+								<p class="weather-value">18</p>
+								<p class="weather-value-celcius">°C</p>
+								<div class="vertical-rule"></div>
+								<p class="weather-value-fahrenheid">°F</p>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</body>
