--- a/_index.html
+++ b/_index.html
@@ -46,7 +46,7 @@
 						</div>
 						<div class="left-side-bottom">
 							<video loop muted autoplay>
-								<source src="./img/sunny_2.mp4" type="video/mp4" />
+								<source src="./img/partly_cloudy.mp4" type="video/mp4" />
 								Your browser does not support the video tag.
 							</video>
 						</div>
